--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
-    "sharp": "0.33.5",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2",
